Refine HTML and styles: add new "Nuestro Enfoque" section with gradient background and articles; introduce utilities for gradient styling, spacing, and dark mode support.

--- a/index.html
+++ b/index.html
@@ -769,6 +769,62 @@
       </div>
     </section>
 
+    <section id="approach" class="py-24 bg-gradient-to-br from-white via-sky-50/30 to-white dark:from-slate-900 dark:via-slate-800/50 dark:to-slate-900" aria-labelledby="approach-heading">
+      <div class="max-w-5xl mx-auto px-6">
+        <div class="text-center mb-12" data-aos="fade-up">
+          <span
+            class="inline-block px-4 py-1 bg-sky-100 dark:bg-sky-900/30 text-sky-700 dark:text-sky-300 rounded-full text-sm font-medium mb-4">
+            Nuestro Enfoque
+          </span>
+          <h2 id="approach-heading" class="text-heading font-bold text-slate-900 dark:text-white mb-4">
+            Compromiso con la excelencia
+          </h2>
+        </div>
+
+        <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
+          <article
+            class="bg-white dark:bg-slate-800 rounded-2xl p-8 shadow-lg border border-slate-200 dark:border-slate-700 hover:border-sky-500 transition-all duration-300"
+            data-aos="fade-right">
+            <div class="flex items-start gap-4 mb-4">
+              <div
+                class="w-12 h-12 bg-gradient-to-br from-sky-500 to-blue-600 rounded-xl flex items-center justify-center flex-shrink-0">
+                <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                </svg>
+              </div>
+              <h3 class="text-xl font-bold text-slate-900 dark:text-white mt-2">
+                Desarrollo Centrado en el Usuario
+              </h3>
+            </div>
+            <p class="text-body text-slate-600 dark:text-slate-300 leading-relaxed">
+              Desarrollamos herramientas útiles, congruentes a la expectativa del usuario, conjugando experiencia práctica con estándares de la industria.
+            </p>
+          </article>
+
+          <article
+            class="bg-white dark:bg-slate-800 rounded-2xl p-8 shadow-lg border border-slate-200 dark:border-slate-700 hover:border-sky-500 transition-all duration-300"
+            data-aos="fade-left">
+            <div class="flex items-start gap-4 mb-4">
+              <div
+                class="w-12 h-12 bg-gradient-to-br from-amber-500 to-orange-600 rounded-xl flex items-center justify-center flex-shrink-0">
+                <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                    d="M13 10V3L4 14h7v7l9-11h-7z" />
+                </svg>
+              </div>
+              <h3 class="text-xl font-bold text-slate-900 dark:text-white mt-2">
+                Excelencia Democratizada
+              </h3>
+            </div>
+            <p class="text-body text-slate-600 dark:text-slate-300 leading-relaxed">
+              Buscamos democratizar la excelencia tecnológica ofreciendo a emprendedores y PyMES acceso a soluciones de software de alto nivel que les permitan competir con confianza en cualquier mercado.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
     <section id="clients" class="py-24 bg-white dark:bg-slate-800">
       <div class="max-w-7xl mx-auto px-6">
         <div class="text-center mb-16" data-aos="fade-up">
